# MAI_3rd_Curs

./: README.md
5th_sem/BD/: CCbd.erwin  CCbd_correct.erwin  TemBD8.doc  tre2014BD8.doc
5th_sem/BD/FoxPro demo/: BDcc.DCT  BDcc.DCX  BDcc.dbc  bdcc.ERR  bdcc.FXP  booking.BAK  booking.CDX  booking.dbf  clients.CDX  clients.dbf  configurations.BAK  configurations.CDX  configurations.dbf  stuff.CDX  stuff.dbf  time_packages.BAK  time_packages.CDX  time_packages.dbf
5th_sem/CG/: README.md  readme.md  ЛР1 Пивницкий Даниэль Сергеевич.docx
5th_sem/CG/CourseProject/: Zadanie.doc  main.py
5th_sem/CG/Lab1/: Lab1.cs
5th_sem/CG/Lab2/: Program.cs
5th_sem/CG/Lab3/: Program.cs
5th_sem/CG/Lab4-5/: main.cpp
5th_sem/CG/Lab6/: main.cpp
5th_sem/CG/Lab7/: main.py
5th_sem/CG/Labs/: ЛР2 Пивницкий Даниэль Сергеевич.docx  ЛР3 Пивницкий Даниэль Сергеевич.docx  ЛР4 Пивницкий Даниэль Сергеевич.docx  ЛР6 Пивницкий Даниэль Сергеевич.docx  ЛР7 Пивницкий Даниэль Сергеевич.docx
5th_sem/CG/Other/Лошманов Юрий Андреевич/ЛР2/src/: App.cpp  CMakeLists.txt  main.cpp
5th_sem/CG/Source/: rot.txt
6th_sem/AI/: Lab0.txt
6th_sem/AI/Lab0/: README.md
6th_sem/AI/Lab1/: README.md
6th_sem/AI/Lab2/: README.md  Solution.ipynb  Solution_MyFramework.ipynb
6th_sem/AI/Lab3/: README.md
6th_sem/AI/ML_Lab0/: README.md  work.ipynb
6th_sem/AI/ML_Lab1/: Readme.md  work.ipynb
6th_sem/Crypto/Lab1/: Pivnitskiy_LR1.docx  (+1 more)
6th_sem/Economic/: LK10.xlsx  LK4.docx  LK5.docx  LK6.docx  LK7.docx  LK9 душная сука.docx
6th_sem/Management/: Laboratornaya_rabota.docx
6th_sem/U.Math.Physics/: report.tex
(+244 files in other folders)
